# mest

./: .gitignore  Makefile  README.md  megist--1.0.sql  megist.c  megist.control  megist.h  megistbuild.c  megistget.c  megistpathproc.c  megistscan.c  megistutil.c  megistvalidate.c  mest--1.0.sql  mest.control
data/: load_mest.multirange.sql  load_mest_multirange.sql  load_mest_spanset.sql  tbl_bigint.data  tbl_datemultirange.data  tbl_daterange.data  tbl_int.data  tbl_int4range.data  tbl_int8multirange.data  tbl_int8range.data  tbl_path.data  tbl_timestamptz.data
expected/: 01_create_extension.test.out  02_multirange_mgist.test.out  03_multirange_mspgist.test.out  04_path_mest.test.out
megist/: README.md  megist--1.0.sql  megist.h  megistbuild.c  megistbuildbuffers.c  megistget.c  megistscan.c  megistsplit.c
megist-mobilitydb/: Makefile  README.md  megist_mobilitydb--1.0.sql  megist_mobilitydb.c  megist_mobilitydb.control
mgist/: Makefile  README.md  mgist--1.0.sql  mgist.c  mgist.control  mgist.h  mgistbuild.c  mgistbuildbuffers.c  mgistget.c  mgistpathproc.c  mgistscan.c  mgistsplit.c  mgistutil.c  mgistvalidate.c  multirangetypes_mgist.c  path_mgist.c
mgist-mobilitydb/: Makefile  README.md  mgist_mobilitydb--1.0.sql  mgist_mobilitydb.c  mgist_mobilitydb.control
mgist-postgis/: CMakeLists.txt  README.md  mgist_postgis--1.0.sql
mgist-postgis/liblwgeom/: liblwgeom.h  liblwgeom_internal.h  liblwgeom_topo_internal.h  lwgeom_api.c  lwgeom_geos_split.c  lwgeom_topo.c  lwpoint.c  lwutil.c  ptarray.c
mspgist-mobilitydb/: Makefile  README.md  mspgist_mobilitydb--1.0.sql  mspgist_mobilitydb.c  (+1 more)
(+191 files in other folders)
